# backlight

./: .gitignore  README.md  generate-icon.cjs  package-lock.json  package.json
src/: liked-songs.ts  main.ts  preferences.ts  sessions.ts  style.css  user-profile.ts
src-tauri/: Cargo.toml
src/screens/: activities.ts  artist-prefs.ts  chat.ts  liked-songs-screen.ts  mood.ts  music.ts  soundscape.ts
