[package]
name = "backlight"
version = "0.1.0"
description = "A wellness companion that lives in your system tray"
edition = "2021"

[lib]
name = "backlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
